--- a/power/src/app/static/feedback/feedback.component.scss
+++ b/power/src/app/static/feedback/feedback.component.scss
@@ -16,9 +16,6 @@
     }
 }
 
-.lineb {
-    overflow: hidden;
-    overflow-wrap: break-word;
-    word-wrap: break-word !important;
+.white-space {
     white-space: pre-line !important;
 }
