--- a/power/src/app/static/ogc-services/ogc-services.component.html
+++ b/power/src/app/static/ogc-services/ogc-services.component.html
@@ -3,7 +3,7 @@
         <h1 class="display-3 m-0"
             i18n>OGC Dienste</h1>
 
-        <p class="lead mb-2"
+        <p class="lead mb-2 hyphen-auto"
            i18n>Das LGLN stellt gebührenfreie WMS und WFS Dienste der Bodenrichtwerte in Niedersachsen bereit. Die
             Bodenrichtwerte werden als Jahrgangsdienste zur Verfügung gestellt und sind VBORIS2 konform. Unsere
             Datendienste werden unter der Datenlizenz Deutschland Namensnennung 2.0 bereitgestellt.</p>
@@ -112,7 +112,7 @@
 
             <div class="h5"
                  i18n>Aktuelles Jahr</div>
-            <div class="mb-2"
+            <div class="mb-2 hyphen-auto"
                  i18n>Diese Adresse referenziert immer auf das aktuelle Jahr. Für alle WMS-Dienste ist der
                 GetFeatureInfo Request freigeschaltet.</div>
             <div class="servicelist mb-4">
@@ -121,7 +121,7 @@
 
             <div class="h5"
                  i18n>Jahrgangsdienste</div>
-            <div class="mb-2">
+            <div class="mb-2 hyphen-auto">
                 <span i18n>Die URL endet mit dem gewünschten Jahr für die Daten, ist ein Jahr nicht vorhanden, so ist
                     keine Verbindung möglich. Der älteste Jahrgang des WMS ist 2000. Die WMS-Dienste der Jahrgänge 2000
                     und 2001 enthalten die Bodenrichtwerte in D-Mark, alle anderen in Euro. Dienste vor 2012 sind
@@ -160,7 +160,7 @@
 
             <div class="h5"
                  i18n>Aktuelles Jahr</div>
-            <div class="mb-2"
+            <div class="mb-2 hyphen-auto"
                  i18n>Diese Adresse referenziert immer auf das aktuelle Jahr.</div>
             <div class="servicelist mb-4">
                 <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris</div>
@@ -168,7 +168,7 @@
 
             <div class="h5"
                  i18n>Jahrgangsdienste</div>
-            <div class="mb-2"
+            <div class="mb-2 hyphen-auto"
                  i18n>Die URL endet mit dem gewünschten Jahr für die Daten, ist ein Jahr nicht vorhanden, so ist keine
                 Verbindung möglich. Der älteste Jahrgang des WFS ist 2012.</div>
             <div class="servicelist mb-4">
