--- a/power/src/app/static/privacy/privacy.component.html
+++ b/power/src/app/static/privacy/privacy.component.html
@@ -1,14 +1,17 @@
 <div class="container">
     <h1 i18n>Datenschutz im LGLN</h1>
-    <p i18n>Das Grundgesetz gewährleistet jeder Bürgerin und jedem Bürger das Recht, über Verwendung und Preisgabe
+    <p class="hyphen-auto"
+       i18n>Das Grundgesetz gewährleistet jeder Bürgerin und jedem Bürger das Recht, über Verwendung und Preisgabe
         seiner persönlichen Daten zu bestimmen. Geschützt werden also nicht Daten, sondern die Freiheit der Menschen,
         selbst zu entscheiden, wer was wann und bei welcher Gelegenheit über sie weiß.</p>
-    <p i18n>Das Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN) beachtet bei der Verarbeitung von
+    <p class="hyphen-auto"
+       i18n>Das Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN) beachtet bei der Verarbeitung von
         personenbezogenen Daten die einschlägigen datenschutzrechtlichen Vorschriften. Die europäische
         Datenschutz-Grundverordnung (DS-GVO) wird bei der Verarbeitung von personenbezogenen Daten seit dem 25. Mai 2018
         berücksichtigt. Im Weiteren werden das Bundesdatenschutzgesetz (BDSG) und das Niedersächsische Datenschutzgesetz
         (NDSG) beachtet.</p>
-    <p i18n>Die Verarbeitung personenbezogener Daten im LGLN wird in der nebenstehenden Datenschutzerklärung aufgezeigt.
+    <p class="hyphen-auto"
+       i18n>Die Verarbeitung personenbezogener Daten im LGLN wird in der nebenstehenden Datenschutzerklärung aufgezeigt.
         Diese gilt für die Internetangebote des LGLN und der Gutachterausschüsse für Grundstückswerte in Niedersachsen
         sowie für die Verarbeitung personenbezogener Daten im hoheitlichen Bereich. So sind in den Nachweisen der
         Vermessungs- und Katasterverwaltung personenbezogene Daten enthalten, deren Herausgabe bei berechtigtem
@@ -23,12 +26,14 @@
             <a href="./assets/legal/20210701_LGLN-Datenschutzerklrung.pdf"
                target="_blank"
                rel="noopener noreferrer nofollow"
+               class="d-inline-block py-2"
                i18n>Datenschutzerklärung LGLN</a>
         </li>
         <li>
             <a href="./assets/legal/20210525_LGLN-Information_Ordnungswidrigkeitenverfahren.pdf"
                target="_blank"
                rel="noopener noreferrer nofollow"
+               class="d-inline-block py-2"
                i18n>Informationspflichten nach § 50 Nds. Datenschutzgesetz im Rahmen von
                 Ordnungswidrigkeitenverfahren</a>
         </li>
@@ -36,6 +41,7 @@
             <a href="./assets/legal/Flyer_Date603f1fd57cdfa.pdf"
                target="_blank"
                rel="noopener noreferrer nofollow"
+               class="d-inline-block py-2"
                i18n>Flyer Datenschutz in der VKV</a>
         </li>
     </ul>
