--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -18,10 +18,11 @@
                         <span class="lgln-red">.NI</span>
                     </h2>
                     <div class="lead text-dark">
-                        <h3 class="h5"
-                            i18n="@@bodenrichtwerte_fulltitle">Bodenrichtwert&shy;informations&shy;system
+                        <h3 class="h5 hyphen-auto"
+                            i18n="@@bodenrichtwerte_fulltitle">Bodenrichtwertinformationssystem
                             Niedersachsen und Bremen</h3>
-                        <p id="bodenrichtwerte_shortdescription"
+                        <p class="hyphen-auto"
+                           id="bodenrichtwerte_shortdescription"
                            i18n="@@bodenrichtwerte_shortdescription">Auskünfte über Bodenrichtwerte für Bauland und
                             Flächen der Land- und Forstwirtschaft</p>
                         <a class="btn btn-primary"
@@ -40,12 +41,13 @@
                      aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
-                    <h2 class="display-4">
+                    <h2 class="display-4 hyphen-auto">
                         <span class="lgln-black"
-                              i18n="@@grundstuecksmarktberichte_fulltitle">Grundstücks&shy;markt&shy;berichte</span>
+                              i18n="@@grundstuecksmarktberichte_fulltitle">Grundstücksmarktberichte</span>
                     </h2>
                     <div class="lead text-dark">
-                        <p id="grundstuecksmarktberichte_shortdescription"
+                        <p class="hyphen-auto"
+                           id="grundstuecksmarktberichte_shortdescription"
                            i18n="@@grundstuecksmarktberichte_shortdescription">Einblicke in den Grundstücksmarkt und der
                             Entwicklung des Preisniveau der einzelnen Gutachterausschüsse</p>
                         <a class="btn btn-primary"
@@ -64,12 +66,13 @@
                      aria-hidden="true"
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
-                    <h2 class="display-4">
+                    <h2 class="display-4 hyphen-auto">
                         <span class="lgln-black"
-                              i18n="@@landesgrundstuecksmarktdaten_fulltitle">Landesgrund&shy;stücks&shy;markt&shy;daten</span>
+                              i18n="@@landesgrundstuecksmarktdaten_fulltitle">Landesgrundstücksmarktdaten</span>
                     </h2>
                     <div class="lead text-dark">
-                        <p id="landesgrundstuecksmarktdaten_shortdescription"
+                        <p class="hyphen-auto"
+                           id="landesgrundstuecksmarktdaten_shortdescription"
                            i18n="@@landesgrundstuecksmarktdaten_shortdescription">Eine Analyse des Grundstücksmarktes in
                             ganz Niedersachsen vom oberen Gutachterausschuss</p>
                         <a class="btn btn-primary"
@@ -93,9 +96,10 @@
                         <span class="lgln-black">PIX</span>
                     </h2>
                     <div class="lead text-dark">
-                        <h3 class="h5"
+                        <h3 class="h5 hyphen-auto"
                             i18n>Niedersächsischer Immobilienpreisindex</h3>
-                        <p id="immobilienpreisindex_shortdescription"
+                        <p class="hyphen-auto"
+                           id="immobilienpreisindex_shortdescription"
                            i18n="@@immobilienpreisindex_shortdescription">Darstellung der Preisentwicklung von
                             Eigenheimen und Eigentumswohnungen</p>
                         <a class="btn btn-primary"
@@ -119,9 +123,10 @@
                               i18n>IPK</span>
                     </h2>
                     <div class="lead text-dark">
-                        <h3 class="h5"
+                        <h3 class="h5 hyphen-auto"
                             i18n>Immobilien-Preis-Kalkulator</h3>
-                        <p id="immobilienpreiskalkulator_shortdescription"
+                        <p class="hyphen-auto"
+                           id="immobilienpreiskalkulator_shortdescription"
                            i18n="@@immobilienpreiskalkulator_shortdescription">Ein Rechner zum ermitteln eines
                             geschätzten Preisniveau einer Immobilien</p>
                         <a class="btn btn-primary"
@@ -145,9 +150,10 @@
                               i18n>Formulare</span>
                     </h2>
                     <div class="lead text-dark">
-                        <h3 class="h5"
+                        <h3 class="h5 hyphen-auto"
                             i18n>Online Formular Service</h3>
-                        <p id="forms_shortdescription"
+                        <p class="hyphen-auto"
+                           id="forms_shortdescription"
                            i18n="@@forms_shortdescription">Wenn Sie ein Formular einreichen wollen, finden Sie hier
                             unsere Formulare</p>
                         <a class="btn btn-primary"
@@ -171,9 +177,10 @@
                               i18n>OGC Dienste</span>
                     </h2>
                     <div class="lead text-dark">
-                        <h3 class="h5"
+                        <h3 class="h5 hyphen-auto"
                             i18n>OGC Darstellungs- und Downloaddienste</h3>
-                        <p id="ogcservices_shortdescription"
+                        <p class="hyphen-auto"
+                           id="ogcservices_shortdescription"
                            i18n>Das LGLN stellt gebührenfreie OGC Darstellungs- und Downloaddienste über WMS und WFS
                             Schnittstellen bereit</p>
                         <a class="btn btn-primary"
@@ -197,9 +204,10 @@
                               i18n>Feedback</span>
                     </h2>
                     <div class="lead text-dark">
-                        <h3 class="h5"
+                        <h3 class="h5 hyphen-auto"
                             i18n>Fehler oder Vorschlag einreichen</h3>
-                        <p i18n="@@feedback_shortdescription">Wir schätzen Ihr Feedback sehr, bitte helfen Sie uns
+                        <p class="hyphen-auto"
+                           i18n="@@feedback_shortdescription">Wir schätzen Ihr Feedback sehr, bitte helfen Sie uns
                             unseren Service zu verbessern!</p>
                         <a class="btn btn-primary"
                            [routerLink]="['/feedback']"
@@ -225,10 +233,10 @@
                     </a>
                 </h2>
                 <div class="lead">
-                    <h3 class="h5 text-break"
-                        i18n="@@bodenrichtwerte_fulltitle">Bodenrichtwert&shy;informations&shy;system Niedersachsen und
+                    <h3 class="h5 hyphen-auto"
+                        i18n="@@bodenrichtwerte_fulltitle">Bodenrichtwertinformationssystem Niedersachsen und
                         Bremen</h3>
-                    <p class="text-justify"
+                    <p class="hyphen-auto"
                        id="bodenrichtwerte_description"
                        i18n="@@bodenrichtwerte_description">Die Gutachterausschüsse und der Obere Gutachterausschuss für
                         Grundstückswerte in Niedersachsen und Bremen stellen interessierten Nutzern unter BORIS.NI
@@ -258,15 +266,15 @@
              id="grundstuecksmarktberichte">
             <div class="col-md-7"
                  [class.order-md-2]="getCardOrder('grundstuecksmarktberichte')">
-                <h2 class="display-4">
+                <h2 class="display-4 hyphen-auto">
                     <a [routerLink]="['/grundstuecksmarktberichte']"
                        aria-describedby="grundstuecksmarktberichte_description">
                         <span class="lgln-black"
-                              i18n="@@grundstuecksmarktberichte_fulltitle">Grundstücks&shy;markt&shy;berichte</span>
+                              i18n="@@grundstuecksmarktberichte_fulltitle">Grundstücksmarktberichte</span>
                     </a>
                 </h2>
                 <div class="lead">
-                    <p class="text-justify"
+                    <p class="hyphen-auto"
                        id="grundstuecksmarktberichte_description"
                        i18n="@@grundstuecksmarktberichte_description">Grundstücksmarktberichte geben einen fundierten
                         Einblick in das Geschehen am Grundstücksmarkt, insbesondere über Umsätze, Preisentwicklungen
@@ -299,17 +307,17 @@
              id="landesgrundstuecksmarktdaten">
             <div class="col-md-7"
                  [class.order-md-2]="getCardOrder('landesgrundstuecksmarktdaten')">
-                <h2 class="display-4">
+                <h2 class="display-4 hyphen-auto">
                     <a href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/"
                        target="_blank"
                        rel="noopener noreferrer nofollow"
                        aria-describedby="landesgrundstuecksmarktdaten_description">
                         <span class="lgln-black"
-                              i18n="@@landesgrundstuecksmarktdaten_fulltitle">Landesgrund&shy;stücks&shy;markt&shy;daten</span>
+                              i18n="@@landesgrundstuecksmarktdaten_fulltitle">Landesgrundstücksmarktdaten</span>
                     </a>
                 </h2>
                 <div class="lead">
-                    <p class="text-justify"
+                    <p class="hyphen-auto"
                        id="landesgrundstuecksmarktdaten_description"
                        i18n="@@landesgrundstuecksmarktdaten_description">Als Ergänzung zu den örtlichen
                         Grundstücksmarktberichten der Gutachterausschüsse stellen die Landesgrundstücksmarktdaten
@@ -351,9 +359,9 @@
                     </a>
                 </h2>
                 <div class="lead">
-                    <h3 class="h5 text-break"
+                    <h3 class="h5 hyphen-auto"
                         i18n>Niedersächsischer Immobilienpreisindex</h3>
-                    <p class="text-justify"
+                    <p class="hyphen-auto"
                        id="immobilienpreisindex_description"
                        i18n="@@immobilienpreisindex_description">Zur Darstellung der Preisentwicklung von Eigenheimen
                         (freistehende Ein- und Zweifamilienhäuser, Reihenhäuser und Doppelhaushälften) und
@@ -394,9 +402,9 @@
                     </a>
                 </h2>
                 <div class="lead">
-                    <h3 class="h5 text-break"
+                    <h3 class="h5 hyphen-auto"
                         i18n>Immobilien-Preis-Kalkulator</h3>
-                    <p class="text-justify"
+                    <p class="hyphen-auto"
                        id="immobilienpreiskalkulator_description">
                         <span i18n>Mit Hilfe des Immobilien-Preis-Kalkulators können
                             Sie schnell und einfach das Preisniveau für Ihr freistehendes Ein-/Zweifamilienhaus, Ihr
@@ -442,9 +450,9 @@
                     </a>
                 </h2>
                 <div class="lead">
-                    <h3 class="h5 text-break"
+                    <h3 class="h5 hyphen-auto"
                         i18n>Online Formular Service</h3>
-                    <p class="text-justify"
+                    <p class="hyphen-auto"
                        id="forms_description"
                        i18n="@@forms_description">Hier können öffentliche und private Formulare des LGLN online
                         ausgefüllt und abgeschickt werden. Wenn Sie eine PIN für ein Formular erhalten haben, können Sie
@@ -521,9 +529,9 @@
                     </a>
                 </h2>
                 <div class="lead">
-                    <h3 class="h5 text-break"
+                    <h3 class="h5 hyphen-auto"
                         i18n>OGC Darstellungs- und Downloaddienste</h3>
-                    <p class="text-justify"
+                    <p class="hyphen-auto"
                        id="ogcservice_description"
                        i18n>Mithilfe der OGC konformen Dienste Web Map Service (WMS) und Web Feature Service (WFS) der
                         Bodenrichtwerte können Nutzende die Daten in Ihren eigenen GIS-Systemen nutzen, bzw. in eigene
