--- a/power/src/app/static/terms-of-service/terms-of-service.component.html
+++ b/power/src/app/static/terms-of-service/terms-of-service.component.html
@@ -2,27 +2,32 @@
     <h1 i18n>Nutzungsbedingungen</h1>
 
     <h2 i18n>(1) Allgemeines</h2>
-    <p i18n>Die Gutachterausschüsse für Grundstückswerte und der Obere Gutachterausschuss für Grundstückswerte in
+    <p class="hyphen-auto"
+       i18n>Die Gutachterausschüsse für Grundstückswerte und der Obere Gutachterausschuss für Grundstückswerte in
         Niedersachsen haben den gesetzlichen Auftrag, für Transparenz auf dem Grundstücksmarkt zu sorgen. Sie stellen
         daher im Internet interessierten Nutzern Bodenrichtwerte flächendeckend für das Land Niedersachsen oder für
         einen regionalen Bereich zur Verfügung.</p>
 
     <h2 i18n>(2) Zugang</h2>
-    <p i18n>Die Nutzenden haben die Möglichkeit, auf der Website https://immobilienmarkt.niedersachsen.de auf die in das
+    <p class="hyphen-auto"
+       i18n>Die Nutzenden haben die Möglichkeit, auf der Website https://immobilienmarkt.niedersachsen.de auf die in das
         Internet eingestellten Bodenrichtwerte in Niedersachsen zuzugreifen. Der Zugriff ist kostenfrei.</p>
 
     <h2 i18n>(3) Inhalt der Bodenrichtwerte</h2>
-    <p i18n>Bodenrichtwerte stellen den durchschnittlichen Lagewert des Bodens dar. Sie werden auf der Grundlage der
+    <p class="hyphen-auto"
+       i18n>Bodenrichtwerte stellen den durchschnittlichen Lagewert des Bodens dar. Sie werden auf der Grundlage der
         Kaufpreissammlung ermittelt. Hierbei sind nur solche Kaufpreise zu berücksichtigen, die im gewöhnlichen
         Geschäftsverkehr ohne Rücksicht auf ungewöhnliche oder persönliche Verhältnisse erzielt worden sind.</p>
 
     <h2 i18n>(4) Gewährleistung</h2>
-    <p i18n>Die Gutachterausschüsse für Grundstückswerte in Niedersachsen führen die Daten mit der zur Erfüllung ihrer
+    <p class="hyphen-auto"
+       i18n>Die Gutachterausschüsse für Grundstückswerte in Niedersachsen führen die Daten mit der zur Erfüllung ihrer
         öffentlichen Aufgaben erforderlichen Sorgfalt. Sie übernehmen jedoch keine Gewähr für die Vollständigkeit und
         Richtigkeit der Daten.</p>
 
     <h2 i18n>(5) Haftung</h2>
-    <p i18n>Die folgenden Haftungsbeschränkungen gelten nicht für die Haftung bei Amtspflichtverletzungen (§ 839 BGB,
+    <p class="hyphen-auto"
+       i18n>Die folgenden Haftungsbeschränkungen gelten nicht für die Haftung bei Amtspflichtverletzungen (§ 839 BGB,
         Art 34 GG) und eventuelle Ansprüche aus dem Produkthaftungsgesetz. Bei Vorsatz oder grober Fahrlässigkeit sowie
         Schäden aus der Verletzung des Lebens, des Körpers oder der Gesundheit wird die Haftung nicht beschränkt. Bei
         leicht fahrlässiger Verletzung von Pflichten, deren Einhaltung von wesentlicher Bedeutung ist
@@ -33,7 +38,8 @@
         von Erfüllungsgehilfen.</p>
 
     <h2 i18n>(6) Verwendung der Daten</h2>
-    <p i18n>Die Bodenrichtwerte stehen gebührenfrei im Internet zur Verfügung
+    <p class="hyphen-auto"
+       i18n>Die Bodenrichtwerte stehen gebührenfrei im Internet zur Verfügung
         (https://immobilienmarkt.niedersachsen.de/bodenrichtwerte). Für die Bodenrichtwerte gilt die Lizenz "Datenlizenz
         Deutschland – Namensnennung – Version 2.0" (dl-de/by-2-0). Der Lizenztext kann unter www.govdata.de/dl-de/by-2-0
         eingesehen werden. Die Bodenrichtwertanwendung kann gemäß den Nutzungsbestimmungen der Datenlizenz Deutschland –
