--- a/power/src/app/static/accessibility/accessibility.component.html
+++ b/power/src/app/static/accessibility/accessibility.component.html
@@ -1,102 +1,131 @@
 <div class="container">
     <h1 i18n>Erklärung zur Barrierefreiheit</h1>
-    <p i18n>Informationen über die Zugänglichkeit dieser Webseiten gemäß § 9b NBGG sowie über diesbezügliche
+    <p class="hyphen-auto"
+       i18n>Informationen über die Zugänglichkeit dieser Webseiten gemäß § 9b NBGG sowie über diesbezügliche
         Kontaktmöglichkeiten.</p>
-    <p i18n>Diese Webseiten sind mit den Vorgaben der harmonisierten europäischen Norm EN 301 549 V2.1.2 (08-2018)
+    <p class="hyphen-auto"
+       i18n>Diese Webseiten sind mit den Vorgaben der harmonisierten europäischen Norm EN 301 549 V2.1.2 (08-2018)
         größtenteils vereinbar.</p>
 
     <h2 i18n>Nicht barrierefreie Inhalte</h2>
     <h3 i18n>Alternativtexte für Bedienelemente</h3>
     <ul>
-        <li i18n>Nicht alle Grafikfunktionen sind bezeichnet. Einige Grafikschalter haben weder eine sichtbare noch eine
+        <li class="hyphen-auto"
+            i18n>Nicht alle Grafikfunktionen sind bezeichnet. Einige Grafikschalter haben weder eine sichtbare noch eine
             unsichtbare Bezeichnung. Blinde können sich an den von Screenreadern übermittelten Informationen daher nicht
             orientieren.</li>
-        <li i18n>Die Bezeichnung eingebundener Video-Grafiken ist für blinde Personen nicht eindeutig. Sie können sich
+        <li class="hyphen-auto"
+            i18n>Die Bezeichnung eingebundener Video-Grafiken ist für blinde Personen nicht eindeutig. Sie können sich
             anhand der übermittelten Informationen nicht orientieren.</li>
-        <li i18n>Nicht alle Grafiklinks sind für Blinde eindeutig bezeichnet.</li>
-        <li i18n>Beim Verändern der Browser-Hintergrundfarbe verschwinden zum Teil wichtige Funktionen beziehungsweise
+        <li class="hyphen-auto"
+            i18n>Nicht alle Grafiklinks sind für Blinde eindeutig bezeichnet.</li>
+        <li class="hyphen-auto"
+            i18n>Beim Verändern der Browser-Hintergrundfarbe verschwinden zum Teil wichtige Funktionen beziehungsweise
             Markierungen.</li>
     </ul>
 
     <h3 i18n>Gestaltung von Inhalten</h3>
     <ul>
-        <li i18n>Die Hierarchie der eingesetzten HTML Überschriften-Elemente ist nicht logisch. Eine Unterteilung der
+        <li class="hyphen-auto"
+            i18n>Die Hierarchie der eingesetzten HTML Überschriften-Elemente ist nicht logisch. Eine Unterteilung der
             Webseite mit den Strukturelementen h1 bis h6 ist nicht gegeben. In der Struktur fehlen Bereiche wie zum
             Beispiel Menübereich, Servicebereich, Inhaltsbereich und Fußbereich. Blinden Anwenderinnen und Anwendern
             wird dadurch die Orientierung erschwert.</li>
-        <li i18n>Informationen in Listenform sind nicht als Listen im Quelltext implementiert. Dadurch wird blinden
+        <li class="hyphen-auto"
+            i18n>Informationen in Listenform sind nicht als Listen im Quelltext implementiert. Dadurch wird blinden
             Personen die Zugänglichkeit erschwert, da sie Screenreader-Funktionen zum Auswählen und Überspringen von
             Listen und Listenelementen nicht nutzen können.</li>
-        <li i18n>Nicht alle Textpassagen/Absätze sind mit geeigneten HTML-Strukturelementen ausgezeichnet.</li>
-        <li i18n>Nicht durchgängig sind Datentabellen strukturell richtig aufgebaut, was Blinden einen zielgerichteten
+        <li class="hyphen-auto"
+            i18n>Nicht alle Textpassagen/Absätze sind mit geeigneten HTML-Strukturelementen ausgezeichnet.</li>
+        <li class="hyphen-auto"
+            i18n>Nicht durchgängig sind Datentabellen strukturell richtig aufgebaut, was Blinden einen zielgerichteten
             Informationsabruf erschwert. Beim Auslesen der Inhalte mittels Screenreader sind Inhalte nicht in logischer
             Abfolge auslesbar.</li>
-        <li i18n>Nicht an allen Eingabefeldern ist ein autocomplete-Attribut implementiert, welches insbesondere
+        <li class="hyphen-auto"
+            i18n>Nicht an allen Eingabefeldern ist ein autocomplete-Attribut implementiert, welches insbesondere
             motorisch eingeschränkten Menschen die Eingabe von Daten vereinfachen kann, indem Eingabevorschläge
             angeboten werden, die einfach übernommen werden können.</li>
-        <li i18n>Der Kontrast der Textfarbe zur Hintergrundfarbe ist nicht in allen Fällen ausreichend, insbesondere
+        <li class="hyphen-auto"
+            i18n>Der Kontrast der Textfarbe zur Hintergrundfarbe ist nicht in allen Fällen ausreichend, insbesondere
             fehlsichtigen Personen wird dadurch das Erkennen der Texte und somit der Informationsabruf erschwert.</li>
-        <li i18n>Bei einer Verringerung der Browserbreite sind unter Umständen nicht mehr alle Funktionen
+        <li class="hyphen-auto"
+            i18n>Bei einer Verringerung der Browserbreite sind unter Umständen nicht mehr alle Funktionen
             tastaturzugänglich.</li>
     </ul>
 
     <h3 i18n>Bedienbarkeit</h3>
     <ul>
-        <li i18n>Nicht durchgängig sind alle Funktionen und Inhalte mittels Tastaturnutzung ansteuerbar beziehungsweise
+        <li class="hyphen-auto"
+            i18n>Nicht durchgängig sind alle Funktionen und Inhalte mittels Tastaturnutzung ansteuerbar beziehungsweise
             bedienbar. Nicht durchgängig sind alle Funktionen mittels Tabulator-Taste ansteuerbar. Die TAB-Reihenfolge
             ist nicht durchgängig nachvollziehbar, da unsichtbare Elemente angesteuert. Motorisch eingeschränkte
             Menschen können sich in Teilbereichen einer Seite zum Teil nur schwer orientieren. Bei der
             Tastaturnavigation ist der Fokus nicht durchgängig gut sichtbar. Motorisch eingeschränkten Menschen wird
             dadurch die Orientierung bei der Tastaturnavigation erschwert.</li>
-        <li i18n>Die Hauptsprache der Webseiten ist im Quelltext nicht angegeben. Dadurch kann insbesondere bei der
+        <li class="hyphen-auto"
+            i18n>Die Hauptsprache der Webseiten ist im Quelltext nicht angegeben. Dadurch kann insbesondere bei der
             Nutzung einer Screenreader-Software der Informationsabruf erschwert werden.</li>
-        <li i18n>Nicht alle technischen Bezeichnungen der Seite wurden im Quelltext an die Sprache der Website
+        <li class="hyphen-auto"
+            i18n>Nicht alle technischen Bezeichnungen der Seite wurden im Quelltext an die Sprache der Website
             angepasst. Dadurch kann insbesondere bei der Nutzung einer Screenreader-Software der Informationsabruf
             erschwert werden.</li>
     </ul>
 
     <h3 i18n>Fehleridentifizierung</h3>
     <ul>
-        <li i18n>Nicht alle Fehlermeldung werden so aufgezeigt, dass sie auch von Screenreadern erfasst werden können.
+        <li class="hyphen-auto"
+            i18n>Nicht alle Fehlermeldung werden so aufgezeigt, dass sie auch von Screenreadern erfasst werden können.
             Teilweise fehlen Hinweise und Beschriftungen, die notwendige Eingaben der Nutzerinnen und Nutzer
             beschreiben.</li>
-        <li i18n>Innerhalb des Webportals ist der Quelltext nicht durchgängig valide, es sind Fehler in der HTML-Syntax
+        <li class="hyphen-auto"
+            i18n>Innerhalb des Webportals ist der Quelltext nicht durchgängig valide, es sind Fehler in der HTML-Syntax
             vorhanden.</li>
-        <li i18n>Für einige Komponenten wie Bereichsöffner/-schließer sind Name und Rolle nicht erkennbar. Auch wird
+        <li class="hyphen-auto"
+            i18n>Für einige Komponenten wie Bereichsöffner/-schließer sind Name und Rolle nicht erkennbar. Auch wird
             Screenreadern der Name und der Zustand der Komponenten nicht richtig übermittelt, wodurch diese für blinde
             Nutzerinnen und Nutzer nicht zu verwenden sind.</li>
-        <li i18n>Die Breadcrumb wird als solche von Screenreadern nicht erkannt. Für Blinde sind es nur normale Links.
+        <li class="hyphen-auto"
+            i18n>Die Breadcrumb wird als solche von Screenreadern nicht erkannt. Für Blinde sind es nur normale Links.
             Es fehlt die entsprechende Auszeichnung im Quelltext.</li>
-        <li i18n>Statusmeldungen der Inhalte sind programmatisch nicht ermittelbar, so dass sie von
+        <li class="hyphen-auto"
+            i18n>Statusmeldungen der Inhalte sind programmatisch nicht ermittelbar, so dass sie von
             Hilfsmitteltechnologie nicht ausgegeben werden können, ohne den Fokus zu erhalten.</li>
     </ul>
 
     <h3 i18n>Sonstiges</h3>
     <ul>
-        <li i18n>Die Zeichenhöhe entspricht nicht durchgängig den ergonomischen Vorgaben, was die Lesbarkeit erschwert.
+        <li class="hyphen-auto"
+            i18n>Die Zeichenhöhe entspricht nicht durchgängig den ergonomischen Vorgaben, was die Lesbarkeit erschwert.
         </li>
-        <li i18n>Eingebundene Dokumente sind zum Teil nicht barrierefrei.</li>
+        <li class="hyphen-auto"
+            i18n>Eingebundene Dokumente sind zum Teil nicht barrierefrei.</li>
     </ul>
-    <p i18n>Der Webauftritt wird an die EU-Richtlinie 2016/2102 zur Umsetzung des barrierefreien Internets öffentlicher
+    <p class="hyphen-auto"
+       i18n>Der Webauftritt wird an die EU-Richtlinie 2016/2102 zur Umsetzung des barrierefreien Internets öffentlicher
         Stellen angepasst und optimiert. Die identifizierten Defizite und Mängel befinden sich aktuell in einem
         kontinuierlichen Verbesserungsprozess, der sukzessive abgearbeitet wird.</p>
 
     <h2 i18n>Erstellung dieser Erklärung zur Barrierefreiheit</h2>
-    <p i18n>Diese Erklärung wurde am 15.09.2021 erstellt. Die Einschätzung basiert auf einer Selbstbewertung.</p>
+    <p class="hyphen-auto"
+       i18n>Diese Erklärung wurde am 15.09.2021 erstellt. Die Einschätzung basiert auf einer Selbstbewertung.</p>
 
     <h2 i18n>Feedback und Kontaktangaben</h2>
-    <p i18n>Über den Link "Feedback" im Navigationsmenü oder "Impressum" im Footer am Ende der Seite können Sie Mängel
+    <p class="hyphen-auto"
+       i18n>Über den Link "Feedback" im Navigationsmenü oder "Impressum" im Footer am Ende der Seite können Sie Mängel
         in Bezug auf die Einhaltung der Barrierefreiheitsanforderungen mitteilen.</p>
 
     <h2 i18n>Schlichtungsverfahren</h2>
-    <p i18n>Bei nicht zufriedenstellenden Antworten aus oben genannter Kontaktmöglichkeit können Sie bei der
+    <p class="hyphen-auto"
+       i18n>Bei nicht zufriedenstellenden Antworten aus oben genannter Kontaktmöglichkeit können Sie bei der
         Schlichtungsstelle, eingerichtet bei der Landesbeauftragten für Menschen mit Behinderungen in Niedersachsen,
         einen Antrag auf Einleitung eines Schlichtungsverfahrens nach dem Niedersächsischen
         Behindertengleichstellungsgesetz (NBGG) stellen.</p>
-    <p i18n>Die Schlichtungsstelle nach § 9 d NBGG hat die Aufgabe, Streitigkeiten zwischen Menschen mit Behinderungen
+    <p class="hyphen-auto"
+       i18n>Die Schlichtungsstelle nach § 9 d NBGG hat die Aufgabe, Streitigkeiten zwischen Menschen mit Behinderungen
         und öffentlichen Stellen des Landes Niedersachsen, zum Thema Barrierefreiheit in der IT, beizulegen. Das
         Schlichtungsverfahren ist kostenlos. Es muss kein Rechtsbeistand eingeschaltet werden.</p>
-    <p i18n>Direkt kontaktieren können Sie die Schlichtungsstelle unter</p>
+    <p class="hyphen-auto"
+       i18n>Direkt kontaktieren können Sie die Schlichtungsstelle unter</p>
 
     <address>
         <table class="table table-responsive borderless">
