--- a/power/src/app/static/imprint/imprint.component.html
+++ b/power/src/app/static/imprint/imprint.component.html
@@ -91,7 +91,8 @@
     <h2 i18n>Haftungsausschluss</h2>
 
     <h3 i18n>1. Inhalt des Onlineangebotes</h3>
-    <p i18n>Der Autor übernimmt keinerlei Gewähr für die Aktualität, Korrektheit, Vollständigkeit oder Qualität der
+    <p class="hyphen-auto"
+       i18n>Der Autor übernimmt keinerlei Gewähr für die Aktualität, Korrektheit, Vollständigkeit oder Qualität der
         bereitgestellten Informationen. Haftungsansprüche gegen den Autor, welche sich auf Schäden materieller oder
         ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw. durch die
         Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen,
@@ -101,11 +102,13 @@
         Veröffentlichung zeitweise oder endgültig einzustellen.</p>
 
     <h3 i18n>2. Verweise und Links</h3>
-    <p i18n>Bei direkten oder indirekten Verweisen auf fremde Internetseiten ("Links"), die außerhalb des
+    <p class="hyphen-auto"
+       i18n>Bei direkten oder indirekten Verweisen auf fremde Internetseiten ("Links"), die außerhalb des
         Verantwortungsbereiches des Autors liegen, würde eine Haftungsverpflichtung ausschließlich in dem Fall in Kraft
         treten, in dem der Autor von den Inhalten Kenntnis hat und es ihm technisch möglich und zumutbar wäre, die
         Nutzung im Falle rechtswidriger Inhalte zu verhindern.</p>
-    <p i18n>Der Autor erklärt hiermit ausdrücklich, dass zum Zeitpunkt der Linksetzung keine illegalen Inhalte auf den
+    <p class="hyphen-auto"
+       i18n>Der Autor erklärt hiermit ausdrücklich, dass zum Zeitpunkt der Linksetzung keine illegalen Inhalte auf den
         zu verlinkenden Seiten erkennbar waren. Auf die aktuelle und zukünftige Gestaltung, die Inhalte oder die
         Urheberschaft der gelinkten/verknüpften Seiten hat der Autor keinerlei Einfluss. Deshalb distanziert er sich
         hiermit ausdrücklich von allen Inhalten aller gelinkten /verknüpften Seiten, die nach der Linksetzung verändert
@@ -116,19 +119,23 @@
         verwiesen wurde, nicht derjenige, der über Links auf die jeweilige Veröffentlichung lediglich verweist.</p>
 
     <h3 i18n>3. Urheber- und Kennzeichenrecht</h3>
-    <p i18n>Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Grafiken, Tondokumente,
+    <p class="hyphen-auto"
+       i18n>Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Grafiken, Tondokumente,
         Videosequenzen und Texte zu beachten, von ihm selbst erstellte Grafiken, Tondokumente, Videosequenzen und Texte
         zu nutzen oder auf lizenzfreie Grafiken, Tondokumente, Videosequenzen und Texte zurückzugreifen.</p>
-    <p i18n>Alle innerhalb des Internetangebotes genannten und ggf. durch Dritte geschützten Marken- und Warenzeichen
+    <p class="hyphen-auto"
+       i18n>Alle innerhalb des Internetangebotes genannten und ggf. durch Dritte geschützten Marken- und Warenzeichen
         unterliegen uneingeschränkt den Bestimmungen des jeweils gültigen Kennzeichenrechts und den Besitzrechten der
         jeweiligen eingetragenen Eigentümer. Allein aufgrund der bloßen Nennung ist nicht der Schluß zu ziehen, dass
         Markenzeichen nicht durch Rechte Dritter geschützt sind!</p>
-    <p i18n>Das Copyright für veröffentlichte, vom Autor selbst erstellte Objekte bleibt allein beim Autor der Seiten.
+    <p class="hyphen-auto"
+       i18n>Das Copyright für veröffentlichte, vom Autor selbst erstellte Objekte bleibt allein beim Autor der Seiten.
         Eine Vervielfältigung oder Verwendung solcher Grafiken, Tondokumente, Videosequenzen und Texte in anderen
         elektronischen oder gedruckten Publikationen ist ohne ausdrückliche Zustimmung des Autors nicht gestattet.</p>
 
     <h3 i18n>4. Rechtswirksamkeit dieses Haftungsausschlusses</h3>
-    <p i18n>Dieser Haftungsausschluss ist als Teil des Internetangebotes zu betrachten, von dem aus auf diese Seite
+    <p class="hyphen-auto"
+       i18n>Dieser Haftungsausschluss ist als Teil des Internetangebotes zu betrachten, von dem aus auf diese Seite
         verwiesen wurde. Sofern Teile oder einzelne Formulierungen dieses Textes der geltenden Rechtslage nicht, nicht
         mehr oder nicht vollständig entsprechen sollten, bleiben die übrigen Teile des Dokumentes in ihrem Inhalt und
         ihrer Gültigkeit davon unberührt.</p>
