Einbindung der 3rdpartylicenses.txt

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -409,6 +409,11 @@
                                class="footer-link d-inline-block py-2"
                                i18n>Barrierefreiheit</a>
                         </li>
+                        <li>
+                            <a [routerLink]="['/open-source-bibliotheken']"
+                               class="footer-link d-inline-block py-2"
+                               i18n>Open-Source-Bibliotheken</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 p-1 m-0">
