--- a/power/src/app/static/open-source-libraries/open-source-libraries.component.html
+++ b/power/src/app/static/open-source-libraries/open-source-libraries.component.html
@@ -1,2 +1,20 @@
 <h1>Verwendete Open Source Bibliotheken</h1>
-<pre> {{ licenses }} </pre>
+
+<div class="table-responsive">
+    <table class="table table-striped table-bordered .table-responsive">
+        <caption class="sr-only"
+                 i18n>Auflistung der verwendeten Open Source Bibliotheken</caption>
+        <thead>
+            <tr>
+                <th scope="col"><span i18n>Name</span></th>
+                <th scope="col"><span i18n>Lizenz</span></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let lib of libs">
+                <td>{{ lib.name }}</td>
+                <td>{{ lib.license }}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
